--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="google_app_id">1041118394583</string>
     <string name="infobip_application_code">b7ad2bedd5b87f5af6cdaca08af24aea-8ca3e122-dc1d-441d-996f-39c1e514de74</string>
+    <string name="erase_inbox">Erase inbox</string>
+    <string name="total_received">Total Received:</string>
 </resources>
