--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -1,5 +1,37 @@
 <resources>
-    <string name="action_settings">Settings</string>
     <string name="erase_inbox">Erase inbox</string>
     <string name="total_received">Total Received:</string>
+    <string name="title_activity_inspect">Inspect</string>
+
+    <!-- Strings related to Inspect -->
+    <string name="action_inspect">Inspect</string>
+
+    <!-- General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_infobip_registration_id">Infobip registration ID</string>
+    <string name="pref_default_infobip_registration_id">N/A</string>
+
+    <string name="pref_title_application_code">Application code</string>
+    <string name="pref_default_application_code">N/A</string>
+
+    <string name="pref_title_gcm_registration_id">GCM registration ID</string>
+    <string name="pref_default_gcm_registration_id">N/A</string>
+
+    <string name="pref_title_gcm_registration_id_saved">GCM registration ID saved</string>
+    <string name="pref_description_gcm_registration_id_saved">GCM registration ID are saved on Infobip server</string>
+
+    <string name="pref_title_gcm_sender_id">GCM sender ID</string>
+    <string name="pref_default_gcm_sender_id">N/A</string>
+    <!-- /General settings -->
+
+    <!-- Settings for Notifications -->
+    <string name="pref_header_notifications">TODO Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
 </resources>
