MM-128 - Uses upsert method for creating and updating registrations

--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- General settings -->
     <string name="pref_header_general">General</string>
 
-    <string name="pref_title_infobip_registration_id">Infobip registration ID</string>
+    <string name="pref_title_infobip_registration_id">Device application instance ID</string>
     <string name="pref_default_infobip_registration_id">N/A</string>
 
     <string name="pref_title_application_code">Application code</string>
