--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="pref_title_create_registration_error">Create registration errors</string>
     <string name="pref_title_update_registration_error">Update registration error</string>
     <string name="pref_title_delivery_reporting_error">Delivery reporting errors</string>
+    <string name="pref_title_last_http_error">Last HTTP error</string>
     <!-- /General settings -->
 
     <!-- Settings for Notifications -->
