--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="action_inspect">Inspect</string>
 
     <!-- General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_information">Information</string>
 
     <string name="pref_title_infobip_registration_id">Device application instance ID</string>
     <string name="pref_default_infobip_registration_id">N/A</string>
@@ -32,14 +32,12 @@
     <string name="pref_title_delivery_reporting_error">Delivery reporting errors</string>
     <string name="pref_title_last_http_error">Last HTTP error</string>
 
-    <string name="pref_title_msisdn">MSISDN</string>
-    <string name="pref_description_msisdn_saved">MSISDN is saved on Infobip server</string>
     <string name="pref_title_msisdn_saved">MSISDN saved</string>
     <string name="pref_title_msisdn_sync_error">MSISDN sync errors</string>
     <!-- /General settings -->
 
     <!-- Settings for Notifications -->
-    <string name="pref_header_notifications">TODO Notifications</string>
+    <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
 
@@ -47,4 +45,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!-- Settings for Notifications -->
+    <string name="pref_header_personal">Settings</string>
+
+    <string name="pref_title_msisdn">MSISDN</string>
+    <string name="pref_description_msisdn_saved">MSISDN is saved on Infobip server</string>
 </resources>
