--- a/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/main/res/values/strings.xml
@@ -28,9 +28,8 @@
     <string name="pref_title_gcm_sender_id">GCM sender ID</string>
     <string name="pref_default_gcm_sender_id">N/A</string>
 
-    <string name="pref_title_registration_sync_error">Registration sync errors</string>
-    <string name="pref_title_delivery_reporting_error">Delivery reporting errors</string>
-    <string name="pref_title_last_http_error">Last HTTP error</string>
+    <string name="pref_title_last_api_error">Last API error</string>
+    <string name="pref_title_last_validation_error">Last validation error</string>
 
     <string name="pref_title_msisdn_reported">MSISDN reported</string>
     <string name="pref_title_msisdn_sync_error">MSISDN sync errors</string>
