Pull request #189: Okoroleva CHAT-618 ErrorState
Merge in MML/infobip-mobile-messaging-android from okoroleva-CHAT-618_ErrorState to master

Squashed commit of the following:

commit fb5862042254d98d0f207b873ebb6c148308b47a
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 21:28:02 2020 +0300

    fixes after PR

commit d99da529b18a6887e4095e36aa4d550fedb37d15
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:42:43 2020 +0300

    removed not needed strings

commit 17965a9ef8579f28e87b63dd320cdf2040b151e6
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:42:00 2020 +0300

    fixes after PR

commit 2c7503beb4a3c87dae5eaadf726015d11fed7fc3
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 16:22:38 2020 +0300

    fixes after PR

commit ac5c1f53848abe0422e6d34498b9732790c7bc51
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 12:27:12 2020 +0300

    Errors handling change

commit be3d16eebf7238579eaf299ac14ba178154c1bab
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jun 16 11:38:47 2020 +0300

    chat views configuration update, chatBroadcastrer, Errors handling

commit a6f276cb02a9e455a709f1d41bcd7134b7e8c9a7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 17:02:56 2020 +0300

    translations

commit 0d06352af22372738d90cf2d4ba24506d0626b4f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 16:56:31 2020 +0300

    translations

commit a9262fcf84df5f67837b0fc862276bbef7836dd5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 10 16:13:39 2020 +0300

    animated tv when connection not available

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -1,15 +1,10 @@
 <resources>
     <string name="ib_inappchat_widget_uri" translatable="false">file:///android_asset/inappchat-widget.html</string>
 
-    <!-- Chat conversation screen -->
-    <string name="connected">Connected</string>
-    <string name="no_connection">No connection</string>
-    <string name="no_internet_connection">No internet connection</string>
-
     <!-- Default resources for customizable strings -->
     <string name="ib_chat_view_title">""</string>
     <string name="ib_chat_message_hint">Send a message…</string>
-    <string name="ib_chat_not_available">Chat is not available</string>
+    <string name="ib_chat_no_connection">No connection</string>
     <string name="ib_iv_btn_send_desc">Send chat message</string>
 
 </resources>
