Pull request #196: Sending Attachments
Merge in MML/infobip-mobile-messaging-android from okoroleva_CHAT-632_Attachments to master

Squashed commit of the following:

commit db5d2167a4887dc964cd7a821de9e2ed72eca5e6
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Jul 20 17:04:40 2020 +0300

    send button improvement

commit be426e061b61e5d8cdc48ae149329a72edc76187
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Jul 20 13:03:01 2020 +0300

    removed not needed permission

commit 8b695487d07255337e3c4bf23fa4ea08b0d40d12
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Jul 20 12:47:12 2020 +0300

    localization

commit 3131e9b28334f141cdb6845eb551c49d0662ae9f
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Jul 17 16:03:20 2020 +0300

    strings

commit f02bda6ea7406a44a83451de0c06304d2e439f47
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Jul 17 14:56:01 2020 +0300

    files moved to attachment package

commit 76e264fd4aeb7b9402551dbc63c3a5de42b7efd5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Jul 17 14:51:24 2020 +0300

    Refactorings, fix of uploading big base64 strings

commit b8fd5532d0aeed9eb8497fded05b0bd66fc6a3e5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 16 16:34:01 2020 +0300

    refactoring after PR

commit 7b052d4059a8d984a869592fd3d9565aa6aa1dea
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 16 15:25:10 2020 +0300

    renamings according PR

commit 3c14c3eb8aadbbe884ae50e3102eef02d9e44e5d
Merge: a7ddc8bb 9c2e4580
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 16 15:15:29 2020 +0300

    Merge branch 'master' of ssh://git.ib-ci.com:7999/mml/infobip-mobile-messaging-android into okoroleva_CHAT-632_Attachments

    # Conflicts:
    #	infobip-mobile-messaging-android-sdk/src/main/java/org/infobip/mobile/messaging/mobileapi/InternalSdkError.java

commit a7ddc8bbe79590ae282c703b229496bfc03e99bc
Author: Olg

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hr/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Nema veze</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Premašena je najveća dopuštena veličina privitka</string>
+    <string name="ib_chat_button_settings">Postavke</string>
+    <string name="ib_chat_permissions_not_granted_title">Dozvole nisu odobrene</string>
+    <string name="ib_chat_permissions_not_granted_message">Možete ih odobriti u postavkama programa.</string>
 </resources>
