--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-cs/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-cs/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Žádné připojení</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maximální povolená velikost přílohy byla překročena</string>
+    <string name="ib_chat_button_settings">Nastavení</string>
+    <string name="ib_chat_permissions_not_granted_title">Povolení nebyla udělena</string>
+    <string name="ib_chat_permissions_not_granted_message">Můžete je udělit v nastavení aplikace.</string>
 </resources>
