--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-da/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-da/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Ingen forbindelse</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maksimal tilladt fastgørelsesstørrelse overskredet</string>
+    <string name="ib_chat_button_settings">Indstillinger</string>
+    <string name="ib_chat_permissions_not_granted_title">Tilladelser ikke givet</string>
+    <string name="ib_chat_permissions_not_granted_message">Du kan give dem i applikationsindstillinger.</string>
 </resources>
