--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fi/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Ei yhteyttä</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Liitteen suurin sallittu koko ylitetty</string>
+    <string name="ib_chat_button_settings">asetukset</string>
+    <string name="ib_chat_permissions_not_granted_title">Lupaa ei myönnetä</string>
+    <string name="ib_chat_permissions_not_granted_message">Voit myöntää heille sovellusasetuksissa.</string>
 </resources>
