--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Pas de connection</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Taille maximale autorisée des pièces jointes dépassée</string>
+    <string name="ib_chat_button_settings">Paramètres</string>
+    <string name="ib_chat_permissions_not_granted_title">Autorisations non accordées</string>
+    <string name="ib_chat_permissions_not_granted_message">Vous pouvez les accorder dans les paramètres de l\'application.</string>
 </resources>
