--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-hu/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Nincs kapcsolat</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Túllépte a maximálisan megengedett mellékletet</string>
+    <string name="ib_chat_permissions_not_granted_message">Az alkalmazás beállításaiban megadhatja őket.</string>
+    <string name="ib_chat_permissions_not_granted_title">Nem adtak engedélyeket</string>
+    <string name="ib_chat_button_settings">Beállítások</string>
 </resources>
