--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-iw/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">אין חיבור</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">חרג מהגודל המצורף המרבי המותר</string>
+    <string name="ib_chat_button_settings">הגדרות</string>
+    <string name="ib_chat_permissions_not_granted_title">לא ניתנו הרשאות</string>
+    <string name="ib_chat_permissions_not_granted_message">אתה יכול להעניק להם הגדרות יישום.</string>
 </resources>
