--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">No connection</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maximum amplitudo concessa affectum exceditur</string>
+    <string name="ib_chat_permissions_not_granted_message">Vos can det illis per applicationem occasus.</string>
+    <string name="ib_chat_permissions_not_granted_title">Quae non permissiones</string>
+    <string name="ib_chat_button_settings">Optiones</string>
 </resources>
