--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Geen connectie</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maximaal toegestane bijlagegrootte overschreden</string>
+    <string name="ib_chat_button_settings">Instellingen</string>
+    <string name="ib_chat_permissions_not_granted_title">Toestemmingen niet verleend</string>
+    <string name="ib_chat_permissions_not_granted_message">U kunt ze toekennen in toepassingsinstellingen.</string>
 </resources>
