--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-no/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Ingen forbindelse</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maksimal tillatt innfestingsstørrelse overskredet</string>
+    <string name="ib_chat_button_settings">innstillinger</string>
+    <string name="ib_chat_permissions_not_granted_title">Tillatelser ikke gitt</string>
+    <string name="ib_chat_permissions_not_granted_message">Du kan gi dem i applikasjonsinnstillinger.</string>
 </resources>
