--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Brak połączenia</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Przekroczono maksymalny dozwolony rozmiar załącznika</string>
+    <string name="ib_chat_permissions_not_granted_message">Możesz je przyznać w ustawieniach aplikacji.</string>
+    <string name="ib_chat_permissions_not_granted_title">Nie przyznano uprawnień</string>
+    <string name="ib_chat_button_settings">Ustawienia</string>
 </resources>
