--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ro/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Nici o legătură</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Dimensiunea maximă permisă de atașare a fost depășită</string>
+    <string name="ib_chat_permissions_not_granted_message">Le puteți acorda în setările aplicației.</string>
+    <string name="ib_chat_permissions_not_granted_title">Permisiuni neacordate</string>
+    <string name="ib_chat_button_settings">Setări</string>
 </resources>
