--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ru/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ru/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Нет соединения</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Превышен максимально допустимый размер файла</string>
+    <string name="ib_chat_button_settings">Настройки</string>
+    <string name="ib_chat_permissions_not_granted_title">Разрешения не предоставлены</string>
+    <string name="ib_chat_permissions_not_granted_message">Вы можете предоставить их в настройках приложения.</string>
 </resources>
