--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Ingen förbindelse</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maximal tillåten tillbehörsstorlek överskridits</string>
+    <string name="ib_chat_permissions_not_granted_message">Du kan bevilja dem i applikationsinställningar.</string>
+    <string name="ib_chat_permissions_not_granted_title">Tillstånd inte beviljade</string>
+    <string name="ib_chat_button_settings">inställningar</string>
 </resources>
