--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">ไม่มีการเชื่อมต่อ</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">เกินขนาดสูงสุดที่อนุญาตแล้ว</string>
+    <string name="ib_chat_button_settings">การตั้งค่า</string>
+    <string name="ib_chat_permissions_not_granted_title">ไม่ได้รับอนุญาต</string>
+    <string name="ib_chat_permissions_not_granted_message">คุณสามารถให้สิทธิ์ในการตั้งค่าแอปพลิเคชัน</string>
 </resources>
