--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-tr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-tr/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_no_connection">Bağlantı yok</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">İzin verilen maksimum ek boyutu aşıldı</string>
+    <string name="ib_chat_permissions_not_granted_message">Bunları uygulama ayarlarında verebilirsiniz.</string>
+    <string name="ib_chat_permissions_not_granted_title">İzin verilmedi</string>
+    <string name="ib_chat_button_settings">Ayarlar</string>
 </resources>
