--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="ib_chat_message_hint">Send a message…</string>
     <string name="ib_chat_no_connection">No connection</string>
     <string name="ib_iv_btn_send_desc">Send chat message</string>
-
+    <string name="ib_iv_btn_send_attachment_desc">Send attachment</string>
+    <string name="ib_chat_allowed_attachment_size_exceeded">Maximum allowed attachment size exceeded</string>
+    <string name="ib_chat_button_settings">Settings</string>
+    <string name="ib_chat_permissions_not_granted_title">Permissions not granted</string>
+    <string name="ib_chat_permissions_not_granted_message">You can grant them in application settings.</string>
 </resources>
