--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="ib_inappchat_widget_uri" translatable="false">file:///android_asset/inappchat-widget.html</string>
+    <string name="ib_inappchat_attachment_preview_uri" translatable="false">file:///android_asset/inappchat-attachment-preview.html</string>
 
     <!-- Default resources for customizable strings -->
     <string name="ib_chat_view_title">""</string>
