Pull request #238: MM-4534 Code cleanup
Merge in MML/infobip-mobile-messaging-android from tjuric-MM-4534-Minor_fixes to master

Squashed commit of the following:

commit da91494ef70e5bf916d681f9aa75641e58997ef9
Author: tjuric <tereza.juric@infobip.com>
Date:   Tue May 11 19:04:25 2021 +0200

    MM-4534 Minor code cleanup after code analysis: optimized imports, null checks verified, repersonalize verification of arguments existence, removed unused resources.

--- a/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <string name="main_activity_title">Chat Example</string>
-    <string name="main_activity_button_open_title">Go to chat screen</string>
-    <string name="main_activity_new_message_hint">Write your message</string>
+    <string name="main_activity_title" tools:ignore="MissingTranslation">Chat Example</string>
+    <string name="main_activity_button_open_title" tools:ignore="MissingTranslation">Go to chat screen</string>
 
-    <string name="action_registration_id_copy">Registration ID</string>
+    <string name="action_registration_id_copy" tools:ignore="MissingTranslation">Registration ID</string>
 
-    <string name="toast_registration_id_copy">Registration ID copied to clipboard</string>
+    <string name="toast_registration_id_copy" tools:ignore="MissingTranslation">Registration ID copied to clipboard</string>
 </resources>
