--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Taille maximale autorisée des pièces jointes dépassée</string>
     <string name="ib_chat_permissions_not_granted_title">Autorisations non accordées</string>
     <string name="ib_chat_permissions_not_granted_message">Vous pouvez les accorder dans les paramètres de l\'application.</string>
+    <string name="ib_chat_message_hint">Envoyer un message...</string>
 </resources>
