--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ja/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ja/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">添付ファイルの最大許容サイズを超えています</string>
     <string name="ib_chat_permissions_not_granted_message">アプリケーション設定でそれらを許可できます。</string>
     <string name="ib_chat_permissions_not_granted_title">許可されていない権限</string>
+    <string name="ib_chat_message_hint">メッセージを送信...</string>
 </resources>
