--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pt/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pt/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Tamanho máximo de anexo permitido excedido</string>
     <string name="ib_chat_permissions_not_granted_title">Permissões não concedidas</string>
     <string name="ib_chat_permissions_not_granted_message">Você pode concedê-los nas configurações do aplicativo.</string>
+    <string name="ib_chat_message_hint">Enviar uma mensagem...</string>
 </resources>
