--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-zh-rTW/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-zh-rTW/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">超過允許的最大附件大小</string>
     <string name="ib_chat_permissions_not_granted_title">權限未授予</string>
     <string name="ib_chat_permissions_not_granted_message">您可以在應用程序設置中授予它們。</string>
+    <string name="ib_chat_message_hint">发送一条消息...</string>
 </resources>
