--- a/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-demo/src/chat/res/values/strings.xml
@@ -7,4 +7,28 @@
     <string name="action_registration_id_copy" tools:ignore="MissingTranslation">Registration ID</string>
 
     <string name="toast_registration_id_copy" tools:ignore="MissingTranslation">Registration ID copied to clipboard</string>
+    <string name="turkish">Türkçe</string>
+    <string name="korean">한국어</string>
+    <string name="russian">Русский</string>
+    <string name="japanese">日本語</string>
+    <string name="chinese">繁體中文</string>
+    <string name="spanish">Español</string>
+    <string name="portuguese">Português</string>
+    <string name="polish">Polski</string>
+    <string name="romanian">Românește</string>
+    <string name="arabic">العربية</string>
+    <string name="bosnian">босански</string>
+    <string name="croatian">Hrvatski</string>
+    <string name="greek">Ελληνικά</string>
+    <string name="swedish">Svenska</string>
+    <string name="thai">Thai</string>
+    <string name="lithuanian">Lietuvių</string>
+    <string name="danish">Dansk</string>
+    <string name="latvian">Latviešu</string>
+    <string name="hungarian">Magyar</string>
+    <string name="italian">Italiano</string>
+    <string name="french">Français</string>
+    <string name="slovenian">Slovenščina</string>
+    <string name="ukrainian">украї́нська</string>
+    <string name="english">English</string>
 </resources>
