Pull request #277: Fixed crash when attachment in InAppChat selected
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2150_chat_attachment_crashfix to master

Squashed commit of the following:

commit 4b37e6c264f809e920307cbc4f381a438b52d204
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jul 27 13:36:01 2022 +0200

    Fixed crash when attachment in InAppChat selected

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-cs/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-cs/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximální povolená velikost přílohy byla překročena</string>
     <string name="ib_chat_permissions_not_granted_title">Povolení nebyla udělena</string>
     <string name="ib_chat_permissions_not_granted_message">Můžete je udělit v nastavení aplikace.</string>
+    <string name="ib_chat_cant_create_attachment">Z vybraného souboru nelze vytvořit přílohu</string>
 </resources>
