--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-ko/strings.xml
@@ -5,4 +5,5 @@
     <string name="ib_chat_permissions_not_granted_title">허가되지 않은 권한</string>
     <string name="ib_chat_permissions_not_granted_message">응용 프로그램 설정에서 부여 할 수 있습니다.</string>
     <string name="ib_chat_message_hint">메시지를 보내십시오...</string>
+    <string name="ib_chat_cant_create_attachment">선택한 파일에서 첨부 파일을 만들 수 없습니다.</string>
 </resources>
