--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-bs/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_message_hint">Pošalji poruku...</string>
+    <string name="ib_chat_cant_create_attachment">Nije moguće kreirati prilog iz odabrane datoteke</string>
 </resources>
