--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-el/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-el/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ib_chat_message_hint">Αποστολή μηνύματος...</string>
+    <string name="ib_chat_cant_create_attachment">Δεν είναι δυνατή η δημιουργία συνημμένου από το επιλεγμένο αρχείο</string>
 </resources>
