--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es-rES/strings.xml
@@ -5,4 +5,5 @@
     <string name="ib_chat_permissions_not_granted_title">Permisos no otorgados</string>
     <string name="ib_chat_permissions_not_granted_message">Puede otorgarlos en la configuración de la aplicación.</string>
     <string name="ib_chat_message_hint">Enviar un mensaje...</string>
+    <string name="ib_chat_cant_create_attachment">No se puede crear un archivo adjunto desde el archivo seleccionado</string>
 </resources>
