--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-fr/strings.xml
@@ -5,4 +5,5 @@
     <string name="ib_chat_permissions_not_granted_title">Autorisations non accordées</string>
     <string name="ib_chat_permissions_not_granted_message">Vous pouvez les accorder dans les paramètres de l\'application.</string>
     <string name="ib_chat_message_hint">Envoyer un message...</string>
+    <string name="ib_chat_cant_create_attachment">Impossible de créer une pièce jointe à partir du fichier sélectionné</string>
 </resources>
