--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-in/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Ukuran lampiran maksimum yang diizinkan terlampaui</string>
     <string name="ib_chat_permissions_not_granted_title">Izin tidak diberikan</string>
     <string name="ib_chat_permissions_not_granted_message">Anda dapat memberi mereka dalam pengaturan aplikasi.</string>
+    <string name="ib_chat_cant_create_attachment">Tidak dapat membuat lampiran dari file yang dipilih</string>
 </resources>
