--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-la/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximum amplitudo concessa affectum exceditur</string>
     <string name="ib_chat_permissions_not_granted_message">Vos can det illis per applicationem occasus.</string>
     <string name="ib_chat_permissions_not_granted_title">Quae non permissiones</string>
+    <string name="ib_chat_cant_create_attachment">Non potest creare affectum ex lectus file</string>
 </resources>
