--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-nl/strings.xml
@@ -4,4 +4,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximaal toegestane bijlagegrootte overschreden</string>
     <string name="ib_chat_permissions_not_granted_title">Toestemmingen niet verleend</string>
     <string name="ib_chat_permissions_not_granted_message">U kunt ze toekennen in toepassingsinstellingen.</string>
+    <string name="ib_chat_cant_create_attachment">Kan geen bijlage maken van geselecteerd bestand</string>
 </resources>
