--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-th/strings.xml
@@ -5,4 +5,5 @@
     <string name="ib_chat_permissions_not_granted_title">ไม่ได้รับอนุญาต</string>
     <string name="ib_chat_permissions_not_granted_message">คุณสามารถให้สิทธิ์ในการตั้งค่าแอปพลิเคชัน</string>
     <string name="ib_chat_message_hint">ส่งข้อความ</string>
+    <string name="ib_chat_cant_create_attachment">สร้างไฟล์แนบจากไฟล์ที่เลือกไม่ได้</string>
 </resources>
