--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximum allowed attachment size exceeded</string>
     <string name="ib_chat_permissions_not_granted_title">Permissions not granted</string>
     <string name="ib_chat_permissions_not_granted_message">You can grant them in application settings.</string>
+    <string name="ib_chat_cant_create_attachment">Cannot create attachment from selected file</string>
 </resources>
