Pull request #278: Aboldyrev MM-5038 inbox version bump
Merge in MML/infobip-mobile-messaging-android from aboldyrev-MM-5038-inbox_example to inbox

Squashed commit of the following:

commit 2007453d1945d49aa07e18bf88f3703a46b7156f
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Aug 3 16:51:15 2022 +0300

    extra test

commit a3a73958115ea4251f6072415f31dd67b4a507f8
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Aug 3 12:30:54 2022 +0300

    nonNull

commit 2875c986e15277178315d34506a8b020792c621e
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Aug 3 12:07:28 2022 +0300

    mapper maps

commit 06edaf4b3b024ef2a98ea65b91c281d6a3e11838
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Aug 3 11:21:10 2022 +0300

    covered NPE

commit 65ef384902295f3e40248eb56436806d0b04ceaf
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Tue Aug 2 12:45:12 2022 +0300

    removed test implementation dependency

commit 10a83ce3607adce84b07eb706a58d3b2268feb7b
Merge: 5f2d3148 e64f3d2a
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Tue Aug 2 12:12:10 2022 +0300

    Merge branch 'master' into aboldyrev-MM-5038-inbox_example

commit 5f2d31483132028484e46ef547a224b1f54bf493
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Mon Aug 1 17:11:01 2022 +0300

    moved to inbox-sdk

commit e64f3d2ab203a020d00ae1100efc9a4aafd4f882
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Fri Jul 29 13:09:55 2022 +0000

    [Gradle Release Plugin] - new version commit:  '6.4.0-SNAPSHOT'.

commit 860b7a969043d8ffdd50ab0b686ea8c8ae9d3971
Author: infobip-ci <infobip-ci@infobip.com>
Date:   Fri Jul 29 13:09:53 2022 +0000

    [Gradle Release Plugin] - pre tag commit:  '6.3.2'.

commit 2277eda039642540855fbb9baa98d0b6df155e9f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 29 11:52:54 2022 +0000

    Pull request #277: Fixed crash when 

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-da/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-da/strings.xml
@@ -4,4 +4,6 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maksimal tilladt fastgørelsesstørrelse overskredet</string>
     <string name="ib_chat_permissions_not_granted_title">Tilladelser ikke givet</string>
     <string name="ib_chat_permissions_not_granted_message">Du kan give dem i applikationsindstillinger.</string>
+    <string name="ib_chat_message_hint">Send en besked...</string>
+    <string name="ib_chat_cant_create_attachment">Kan ikke oprette en vedhæftet fil fra den valgte fil</string>
 </resources>
