--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-es/strings.xml
@@ -4,4 +4,6 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Se excedió el tamaño de archivo adjunto máximo permitido</string>
     <string name="ib_chat_permissions_not_granted_message">Puede otorgarlos en la configuración de la aplicación.</string>
     <string name="ib_chat_permissions_not_granted_title">Permisos no otorgados</string>
+    <string name="ib_chat_message_hint">Enviar un mensaje...</string>
+    <string name="ib_chat_cant_create_attachment">No se puede crear un archivo adjunto desde el archivo seleccionado</string>
 </resources>
