--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-pl/strings.xml
@@ -4,4 +4,6 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Przekroczono maksymalny dozwolony rozmiar załącznika</string>
     <string name="ib_chat_permissions_not_granted_message">Możesz je przyznać w ustawieniach aplikacji.</string>
     <string name="ib_chat_permissions_not_granted_title">Nie przyznano uprawnień</string>
+    <string name="ib_chat_message_hint">Wyślij wiadomość...</string>
+    <string name="ib_chat_cant_create_attachment">Nie można utworzyć załącznika z wybranego pliku</string>
 </resources>
