--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-sv/strings.xml
@@ -4,4 +4,6 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">Maximal tillåten tillbehörsstorlek överskridits</string>
     <string name="ib_chat_permissions_not_granted_message">Du kan bevilja dem i applikationsinställningar.</string>
     <string name="ib_chat_permissions_not_granted_title">Tillstånd inte beviljade</string>
+    <string name="ib_chat_message_hint">Skicka ett meddelande...</string>
+    <string name="ib_chat_cant_create_attachment">Det går inte att skapa bilaga från den valda filen</string>
 </resources>
