--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-tr/strings.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values-tr/strings.xml
@@ -4,4 +4,6 @@
     <string name="ib_chat_allowed_attachment_size_exceeded">İzin verilen maksimum ek boyutu aşıldı</string>
     <string name="ib_chat_permissions_not_granted_message">Bunları uygulama ayarlarında verebilirsiniz.</string>
     <string name="ib_chat_permissions_not_granted_title">İzin verilmedi</string>
+    <string name="ib_chat_message_hint">Mesaj gönder...</string>
+    <string name="ib_chat_cant_create_attachment">Seçili dosyadan ek oluşturulamıyor</string>
 </resources>
